--- a/Training5/src/task1/task1-app/src/App.css
+++ b/Training5/src/task1/task1-app/src/App.css
@@ -16,6 +16,11 @@
   .search{
     display: inline-flex;
   }
+  .searchs{
+    display: inline-flex;
+   width: 250px;
+  }
+
   .numberShow{
     font-size: 150px;
   }
@@ -30,7 +35,7 @@
   .dd-header {
     background-color: #04AA6D;
     color: white;
-    padding: 16px;
+
     font-size: 16px;
     border: none;
     cursor: pointer;
@@ -75,4 +80,12 @@
   
   .hidden {
     display: none;
+  }
+  .dd-wrappers {
+    position: relative;
+  display: inline-block;
+    margin-top: 8px;
+    width: 60px;
+    padding-left: 10px;
+    margin: 10px;
   }
